@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.182 2005/11/19 21:03:51 allanonjl Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.183 2005/11/22 04:09:48 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
+
+  21 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
+  new paragraph on welcome screen
   
   19 Nov 2005; John N. Laliberte <allanonjl@gentoo.org>
   ExtraPackages.py: use new method get_install_package_list() from
